force-app/main/default/objects/Lead/fields/IM_Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>IM_Lead_Source_Most_Recent__c</fullName>
    <label>Lead Source - Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>6sense</fullName>
            </value>
            <value>
                <fullName>Channel / Partners</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Inbound call</fullName>
                <label>Inbound Call</label>
            </value>
            <value>
                <fullName>List Purchased</fullName>
                <label>List Purchase</label>
            </value>
            <value>
                <fullName>Live Event</fullName>
            </value>
            <value>
                <fullName>Online Event</fullName>
            </value>
            <value>
                <fullName>Other / Unknown</fullName>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
            <value>
                <fullName>Parent - Integrated / Cross Channel</fullName>
            </value>
            <value>
                <fullName>Sales Generated</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>