force-app/main/default/objects/Lead/fields/IM_Lead_Source_Most_Recent_Details__c.field-meta.xml
<CustomField>
    <fullName>IM_Lead_Source_Most_Recent_Details__c</fullName>
    <label>Lead Source - Most Recent Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IM_Lead_Source_Most_Recent__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bing Ads</fullName>
            </value>
            <value>
                <fullName>Chat - After hours</fullName>
            </value>
            <value>
                <fullName>Chat - Bot - Sales</fullName>
            </value>
            <value>
                <fullName>Chat - Bot - Service</fullName>
            </value>
            <value>
                <fullName>Chat - Live - Sales</fullName>
            </value>
            <value>
                <fullName>Chat - Live - Service</fullName>
            </value>
            <value>
                <fullName>Click-to-Call</fullName>
            </value>
            <value>
                <fullName>Contact Us / Free Quote</fullName>
            </value>
            <value>
                <fullName>Customer Care Referral</fullName>
            </value>
            <value>
                <fullName>Display Ads</fullName>
            </value>
            <value>
                <fullName>Driver Referral</fullName>
            </value>
            <value>
                <fullName>Event Promo - IRM</fullName>
            </value>
            <value>
                <fullName>Event Promo - Third Party</fullName>
            </value>
            <value>
                <fullName>Facebook - Organic</fullName>
            </value>
            <value>
                <fullName>Facebook - Paid</fullName>
            </value>
            <value>
                <fullName>Gated Content</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
                <isActive>false</isActive>
                <label>Inbound Call</label>
            </value>
            <value>
                <fullName>Inbound Email</fullName>
            </value>
            <value>
                <fullName>LinkedIn - Organic</fullName>
            </value>
            <value>
                <fullName>LinkedIn - Paid</fullName>
            </value>
            <value>
                <fullName>Live - 3rd Party Hosted</fullName>
            </value>
            <value>
                <fullName>Live - Forum / Summit / Roundtable</fullName>
            </value>
            <value>
                <fullName>Live - IRM Hosted Event</fullName>
            </value>
            <value>
                <fullName>Live - IRM Webinar</fullName>
            </value>
            <value>
                <fullName>Live - Lunch &amp; Learn / Coffee</fullName>
            </value>
            <value>
                <fullName>Live - Partner Hosted</fullName>
            </value>
            <value>
                <fullName>Live - Trade Show</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>No Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>