force-app/main/default/objects/Lead/fields/IM_Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>IM_Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Suspect</fullName>
                <default>true</default>
                <label>0-Suspect</label>
            </value>
            <value>
                <fullName>1-Inquiry</fullName>
            </value>
            <value>
                <fullName>2-Marketing Qual</fullName>
            </value>
            <value>
                <fullName>3-Sales Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>