force-app/main/default/objects/Lead/fields/IM_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>IM_Lead_Type__c</fullName>
    <inlineHelpText>Iron Mountain Lead Type</inlineHelpText>
    <label>IM Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>