force-app/main/default/objects/Lead/fields/IM_List_Origin__c.field-meta.xml
<CustomField>
    <fullName>IM_List_Origin__c</fullName>
    <label>delete_List Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>