force-app/main/default/objects/Lead/fields/IM_Most_Recent_Asset_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>IM_Most_Recent_Asset_Downloaded__c</fullName>
    <inlineHelpText>This is the most recent material the prospect/customer has downloaded.</inlineHelpText>
    <label>Most Recent Asset Downloaded</label>
    <type>TextArea</type>
</CustomField>