force-app/main/default/objects/Lead/fields/IM_Most_Recent_Search_Query__c.field-meta.xml
<CustomField>
    <fullName>IM_Most_Recent_Search_Query__c</fullName>
    <description>Fed from Eloqua and should contain information regarding the google search string or IP reverse tracking information</description>
    <inlineHelpText>Fed from Eloqua and should contain information regarding the google search string or IP reverse tracking information</inlineHelpText>
    <label>Most Recent Search Query</label>
    <type>TextArea</type>
</CustomField>