force-app/main/default/objects/Lead/fields/IM_Original_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>IM_Original_Lead_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>