force-app/main/default/objects/Lead/fields/IM_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>IM_Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IM_Product_Class__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>Active File Solutions</fullName>
            </value>
            <value>
                <fullName>AP Solutions</fullName>
            </value>
            <value>
                <fullName>Archival Destruction</fullName>
            </value>
            <value>
                <fullName>Archive API</fullName>
            </value>
            <value>
                <fullName>Archive Tape Management Services</fullName>
            </value>
            <value>
                <fullName>Archiving services</fullName>
            </value>
            <value>
                <fullName>BackupCare</fullName>
            </value>
            <value>
                <fullName>Cloud Recovery</fullName>
            </value>
            <value>
                <fullName>Connected Backup</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Custom Solution</fullName>
            </value>
            <value>
                <fullName>D3P</fullName>
            </value>
            <value>
                <fullName>Data Centers</fullName>
            </value>
            <value>
                <fullName>Data Defense</fullName>
            </value>
            <value>
                <fullName>Data Domain</fullName>
            </value>
            <value>
                <fullName>Data Products</fullName>
            </value>
            <value>
                <fullName>Data Restoration Services</fullName>
            </value>
            <value>
                <fullName>Digital Record Center for Compliant Messaging</fullName>
            </value>
            <value>
                <fullName>Digital Record Center for Images</fullName>
            </value>
            <value>
                <fullName>Digital Record Center for Medical Images</fullName>
            </value>
            <value>
                <fullName>Digital Studios</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Document Conversion Services</fullName>
            </value>
            <value>
                <fullName>Domain Name</fullName>
            </value>
            <value>
                <fullName>Film and Sound Archives</fullName>
            </value>
            <value>
                <fullName>Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>LiveVault</fullName>
            </value>
            <value>
                <fullName>MediaCare</fullName>
            </value>
            <value>
                <fullName>Media Management Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>