force-app/main/default/objects/Lead/fields/IM_Sales_Event__c.field-meta.xml
<CustomField>
    <fullName>IM_Sales_Event__c</fullName>
    <label>Sales Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2011 Autonomy Registration</fullName>
            </value>
            <value>
                <fullName>2022 US Q3 Sales Call Campaign Hawaii</fullName>
            </value>
            <value>
                <fullName>2023 BR Febraban Tech Event 6.27</fullName>
            </value>
            <value>
                <fullName>2025 EMEA Paperless Healthcare</fullName>
            </value>
            <value>
                <fullName>30% Off Promo</fullName>
            </value>
            <value>
                <fullName>AiN Group</fullName>
            </value>
            <value>
                <fullName>AR NewLogo Enterprise</fullName>
            </value>
            <value>
                <fullName>AR NewLogo IS</fullName>
            </value>
            <value>
                <fullName>BD EQUIFAX</fullName>
            </value>
            <value>
                <fullName>BD IPSOS</fullName>
            </value>
            <value>
                <fullName>BENELUX Pipeline Growth 2021</fullName>
            </value>
            <value>
                <fullName>BlueWrap</fullName>
            </value>
            <value>
                <fullName>BPO Act - LATAM</fullName>
            </value>
            <value>
                <fullName>BPO Pas - LATAM</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Campaña RH 23</fullName>
            </value>
            <value>
                <fullName>Campaña Universidades 23</fullName>
            </value>
            <value>
                <fullName>Campanha DS Inside Sales - RH</fullName>
            </value>
            <value>
                <fullName>CBRE</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Clean Start</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>CL NewLogo Enterprise</fullName>
            </value>
            <value>
                <fullName>CL NewLogo IS</fullName>
            </value>
            <value>
                <fullName>Congreso America Digital</fullName>
            </value>
            <value>
                <fullName>CRC Flag</fullName>
            </value>
            <value>
                <fullName>DB&amp;R – Revenue from Data</fullName>
            </value>
            <value>
                <fullName>Dell EMC Healthcare</fullName>
            </value>
            <value>
                <fullName>Dell EMC Sourced Opportunities</fullName>
            </value>
            <value>
                <fullName>Digital CrossSale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>