force-app/main/default/objects/Lead/fields/IM_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>IM_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to add a Sales Rep to the Lead.</inlineHelpText>
    <label>Additional Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>