force-app/main/default/objects/Lead/fields/IM_Stage_1_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_Stage_1_Entered_Date__c</fullName>
    <label>Stage 1 Entered Date</label>
    <type>Date</type>
</CustomField>