force-app/main/default/objects/Lead/fields/IM_Stage_2_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_Stage_2_Entered_Date__c</fullName>
    <label>Stage 2 Entered Date</label>
    <type>Date</type>
</CustomField>