force-app/main/default/objects/Lead/fields/IM_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>IM_Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+00:00) Greenwich Mean Time (GMT)</fullName>
            </value>
            <value>
                <fullName>(GMT+00:00) Western European Summer Time (Europe/Lisbon)</fullName>
            </value>
            <value>
                <fullName>(GMT+01:00) Eastern European Summer Time (Europe/Paris)</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Eastern European Summer Time (Europe/Athens)</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Israel Daylight Time (Asia/Jerusalem)</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) South Africa Standard Time (Africa/Johannesburg)</fullName>
            </value>
            <value>
                <fullName>(GMT+03:00) Arabia Standard Time (Asia/Baghdad)</fullName>
            </value>
            <value>
                <fullName>(GMT+03:00) Eastern African Time (Africa/Nairobi)</fullName>
            </value>
            <value>
                <fullName>(GMT+03:00) Moscow Daylight Time (Europe/Moscow)</fullName>
            </value>
            <value>
                <fullName>(GMT+03:30) Iran Daylight Time (Asia/Tehran)</fullName>
            </value>
            <value>
                <fullName>(GMT+04:00) Georgia Time (Asia/Tbilisi)</fullName>
            </value>
            <value>
                <fullName>(GMT+04:00) Gulf Standard Time (Asia/Dubai)</fullName>
            </value>
            <value>
                <fullName>(GMT+04:30) Afghanistan Time (Asia/Kabul)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:00) Pakistan Summer Time (Asia/Karachi)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:00) Uzbekistan Time (Asia/Tashkent)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:00) Yekaterinburg Summer Time (Asia/Yekaterinburg)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:30) India Standard Time (Asia/Calcutta)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Bangladesh Time (Asia/Dacca)</fullName>
            </value>
            <value>
                <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Philippines Time (Asia/Manila)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Singapore Time (Asia/Singapore)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Western Standard Time (Australia)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Korea Standard Time (Asia/Seoul)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>