force-app/main/default/objects/Lead/fields/IM_X0_Suspect_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X0_Suspect_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>0-Suspect - Reached</label>
    <type>Checkbox</type>
</CustomField>