force-app/main/default/objects/Lead/fields/IM_X1_Inquiry_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X1_Inquiry_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1-Inquiry - Reached</label>
    <type>Checkbox</type>
</CustomField>