force-app/main/default/objects/Lead/fields/IM_X3_Sales_Accepted_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X3_Sales_Accepted_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3-Sales Accepted - Reached</label>
    <type>Checkbox</type>
</CustomField>