force-app/main/default/objects/Lead/fields/IM_X4_Sales_Qual_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X4_Sales_Qual_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4-Sales Qual - Reached</label>
    <type>Checkbox</type>
</CustomField>