force-app/main/default/objects/Lead/fields/IME_Display_Division__c.field-meta.xml
<CustomField>
    <fullName>IME_Display_Division__c</fullName>
    <formula>IF( ISPICKVAL(Division , &quot;Europe&quot;) , &quot;Europe&quot;, 
IF( ISPICKVAL(Division , &quot;Latin America&quot;) , &quot;Latin America&quot;, 
IF( ISPICKVAL(Division , &quot;Asia Pacific&quot;) , &quot;Asia Pacific&quot;, 
IF( ISPICKVAL(Division , &quot;Global&quot;) , &quot;Global&quot;, 
IF( ISPICKVAL(Division , &quot;North America&quot;) , &quot;North America&quot;, 
&quot;Error&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>