force-app/main/default/objects/Lead/fields/IMGA_Group__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Group__c</fullName>
    <description>Used to pass the IMGA group name form Eloqua</description>
    <label>IMGA Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>