force-app/main/default/objects/Lead/fields/Interest_AI_ML_Insights__c.field-meta.xml
<CustomField>
    <fullName>Interest_AI_ML_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: AI/ML Insights</label>
    <type>Checkbox</type>
</CustomField>