force-app/main/default/objects/Lead/fields/Interest_Archive__c.field-meta.xml
<CustomField>
    <fullName>Interest_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Archive</label>
    <type>Checkbox</type>
</CustomField>