force-app/main/default/objects/Lead/fields/Interest_Cloud_Backup__c.field-meta.xml
<CustomField>
    <fullName>Interest_Cloud_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Cloud Backup</label>
    <type>Checkbox</type>
</CustomField>