force-app/main/default/objects/Lead/fields/Interest_Data_Center_Decommissioning__c.field-meta.xml
<CustomField>
    <fullName>Interest_Data_Center_Decommissioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data is fed from Eloqua</description>
    <label>Interest: Data Center Decommissioning</label>
    <type>Checkbox</type>
</CustomField>