force-app/main/default/objects/Lead/fields/Interest_Data_Management__c.field-meta.xml
<CustomField>
    <fullName>Interest_Data_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Data Management</label>
    <type>Checkbox</type>
</CustomField>