force-app/main/default/objects/Lead/fields/Interest_IMES__c.field-meta.xml
<CustomField>
    <fullName>Interest_IMES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: IMES</label>
    <type>Checkbox</type>
</CustomField>