force-app/main/default/objects/Lead/fields/Interest_IT_Asset_Destruction__c.field-meta.xml
<CustomField>
    <fullName>Interest_IT_Asset_Destruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: IT Asset Destruction</label>
    <type>Checkbox</type>
</CustomField>