force-app/main/default/objects/Lead/fields/Interest_Secure_Shredding__c.field-meta.xml
<CustomField>
    <fullName>Interest_Secure_Shredding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Secure Shredding</label>
    <type>Checkbox</type>
</CustomField>