force-app/main/default/objects/Lead/fields/Interest_Staffing__c.field-meta.xml
<CustomField>
    <fullName>Interest_Staffing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Staffing</label>
    <type>Checkbox</type>
</CustomField>