force-app/main/default/objects/Lead/fields/Interest_Tape_Storage__c.field-meta.xml
<CustomField>
    <fullName>Interest_Tape_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Tape Storage</label>
    <type>Checkbox</type>
</CustomField>