force-app/main/default/objects/Lead/fields/Interest_Technology_Escrow_Services__c.field-meta.xml
<CustomField>
    <fullName>Interest_Technology_Escrow_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Technology Escrow Services</label>
    <type>Checkbox</type>
</CustomField>