force-app/main/default/objects/Lead/fields/Interest_Workplace_ITAM__c.field-meta.xml
<CustomField>
    <fullName>Interest_Workplace_ITAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest: Workplace ITAM</label>
    <type>Checkbox</type>
</CustomField>