force-app/main/default/objects/Lead/fields/Is_this_a_competetive_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_competetive_Deal__c</fullName>
    <description>Is this a competitive deal?</description>
    <label>Is this a competitive Deal ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>