force-app/main/default/objects/Lead/fields/Job_Level_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_Marketing__c</fullName>
    <description>Updated by Eloqua Contact Washing Machine</description>
    <label>Job Level - Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C-Level/Executive</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner/Partner</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>