force-app/main/default/objects/Lead/fields/L2R_Status__c.field-meta.xml
<CustomField>
    <fullName>L2R_Status__c</fullName>
    <label>L2R Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending ISR Review</fullName>
                <default>true</default>
                <label>Pending ISR Review</label>
            </value>
            <value>
                <fullName>ISR Accepted</fullName>
            </value>
            <value>
                <fullName>ISR Rejected</fullName>
            </value>
            <value>
                <fullName>Pending OSR Review</fullName>
            </value>
            <value>
                <fullName>OSR Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>