force-app/main/default/objects/Lead/fields/Lead_Duration__c.field-meta.xml
<CustomField>
    <fullName>Lead_Duration__c</fullName>
    <description>Once a lead is converted, this field will display the number of days from the time it entered the Stage 2 Entered Date until it was converted.</description>
    <formula>IF((IsConverted), ConvertedDate - IM_Stage_2_Entered_Date__c, null)</formula>
    <label>Lead Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>