force-app/main/default/objects/Lead/fields/Lead_Status_Last_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Last_Change_Date__c</fullName>
    <label>Lead Status Last Change Date</label>
    <type>Date</type>
</CustomField>