force-app/main/default/objects/Lead/fields/Most_Recent_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Sales_Activity__c</fullName>
    <label>Most Recent Sales Activity</label>
    <type>DateTime</type>
</CustomField>