force-app/main/default/objects/Lead/fields/MQL_Type_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>MQL_Type_Most_Recent__c</fullName>
    <description>Calculates if Lead is Hot or Scored or Manual. If Hot and Scored date are the same, Hot takes precedence. Case #03846525 - Updated the formula to consider EDT</description>
    <formula>IF( Partner_MQL__c = TRUE, &quot;Partner MQL&quot;, 
IF((IM_Stage_2_Entered_Date__c = DATEVALUE(TEXT(DATETIMEVALUE(Hot_MQL_Date__c) - 0.16666))) , &quot;Hot&quot;, 
IF((IM_Stage_2_Entered_Date__c = DATEVALUE(TEXT(DATETIMEVALUE( Scored_MQL_Date__c) - 0.16666))), &quot;Scored&quot;, 
&quot;Manual&quot; 
) 
) 
)</formula>
    <label>MQL Type Most Recent</label>
    <type>Text</type>
</CustomField>