force-app/main/default/objects/Lead/fields/Multi_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Multi_Business_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the opportunity involves multiple customer business units.</description>
    <inlineHelpText>Checked indicates the opportunity spans more than one customer business unit.</inlineHelpText>
    <label>Multi-Business Unit</label>
    <type>Checkbox</type>
</CustomField>