force-app/main/default/objects/Lead/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need</label>
    <type>Checkbox</type>
</CustomField>