force-app/main/default/objects/Lead/fields/Need_Pain__c.field-meta.xml
<CustomField>
    <fullName>Need_Pain__c</fullName>
    <label>Need/Pain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Continuity</fullName>
            </value>
            <value>
                <fullName>Chain of Custody</fullName>
            </value>
            <value>
                <fullName>Compliance/Regulatory</fullName>
            </value>
            <value>
                <fullName>Consistency (dept. or locations)</fullName>
            </value>
            <value>
                <fullName>Control/Management</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Efficiency</fullName>
            </value>
            <value>
                <fullName>Must Shred State</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Paperless--transition to electronic</fullName>
            </value>
            <value>
                <fullName>Pracgtive Retention Schedule</fullName>
            </value>
            <value>
                <fullName>Prevent loss of data</fullName>
            </value>
            <value>
                <fullName>Retrieval Process/Streamlined Access</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Shred All</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>