force-app/main/default/objects/Lead/fields/New_Status_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Status_Entered_Date__c</fullName>
    <description>This field captures the date Lead Status changes to &apos;New&apos;.</description>
    <label>New Status Entered Date</label>
    <type>Date</type>
</CustomField>