force-app/main/default/objects/Lead/fields/Number_of_PC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PC__c</fullName>
    <label>delete_Number of PC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>